--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /* Import Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&family=Sanchez:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&family=Sanchez:ital@0;1&display=swap");
 
 /* General Styling */
 * {
@@ -31,30 +31,16 @@ h3 {
   color: #3a3a8e;
 }
 
-p, span, a, li, label, input {
+p,
+span,
+a,
+li,
+label,
+input {
   font-family: "Sanchez", serif;
 }
 
-/* Card Styling */
-.card {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-  border: none;
-  transition: transform 0.2s ease-in-out;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-/* Primary Button Styling */
-.btn-primary {
-  background-color: #6c5ce7;
-  border: none;
-}
-
-.btn-primary:hover {
-  background-color: #5a4bcf;
-}
+/* --------------------- INDEX.html --------------------- */
 
 /* Available Event Cards Section */
 .available-event-card {
@@ -71,10 +57,19 @@ p, span, a, li, label, input {
   transform: scale(1.05); /* Zoom effect on hover */
 }
 
-.available-event-card .card-img-top {
+.img-container-1 {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.available-event-card img {
   width: 100%;
   height: 150px; /* Smaller image height */
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
@@ -97,4 +92,48 @@ p, span, a, li, label, input {
   font-size: 0.8rem;
   padding: 6px 12px;
   border-radius: 4px;
+}
+
+hr {
+  width: 10vw;
+  border-top: 5px dotted rgb(255, 0, 0);
+  border-radius: 10px;
+  margin: 10px auto 30px;
+}
+
+/* Card Styling */
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+  border: none;
+  transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.img-container-2 {
+  width: 100%;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.img-container-2 img {
+  width: 100%;
+  height: 100%; /* Smaller image height */
+  object-fit: contain;
+  object-position: center;
+}
+
+/* Primary Button Styling */
+.btn-primary {
+  background-color: #6c5ce7;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #5a4bcf;
 }
